--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "gulp": "~3.8.10",
     "gulp-jscs": "^1.3.1",
-    "gulp-jshint": "^1.6.2"
+    "gulp-jshint": "^1.6.2",
+    "gulp-scss-lint": "*"
   }
 }
